# shortcut-notes-tui

./: .gitignore  2026-01-16-work-notes-management-design.md  Cargo.toml  TODO.md  clean_notes.sh
src/: app.rs  cache.rs  cli.rs  config.rs  custom_list.rs  dummy.rs  error.rs  error_display.rs  keybindings.rs  keys.rs  lib.rs  macros.rs  main.rs  text_utils.rs  time.rs  tmux.rs  worktree.rs
src/api/: branch.rs  mod.rs
src/api/epic/: mod.rs  view.rs
src/api/iteration/: mod.rs
src/api/story/: comment.rs  mod.rs  view.rs
src/api/user/: mod.rs
src/app/: cmd.rs  error_handling.rs  events.rs  handlers.rs  init.rs  mod.rs  model.rs  msg.rs  update.rs  view.rs
src/app/pane/: action_menu.rs  create_note_modal.rs  description_modal.rs  epic_list.rs  iteration_list.rs  mod.rs  notes_list.rs  story_list.rs
src/block/: counter.rs  mod.rs  paragraph.rs
src/note/: frontmatter.rs  mod.rs
src/pane/: epic.rs  error.rs  list.rs  mod.rs  paragraph.rs
src/view/: action_item_builder.rs  create_note_modal.rs  description_modal.rs  epic_list.rs  iteration_list.rs  keybinds_panel.rs  list.rs  mod.rs  navbar.rs  notes_list.rs  story_item_builder.rs  story_list.rs  story_row.rs  view_builder.rs
