[package]
name = "shortcut-notes-tui"
version = "0.1.0"
description = "A keyboard first Github TUI"
authors = ["Tenzin Platter <143778894+TenzinPlatter@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
color-eyre = "0.6.3"
confy = "2.0.0"
crossterm = "0.29.0"
futures = "0.3.31"
ratatui = { version = "0.30.0", features = ["unstable"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
subprocess = "0.2.13"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
