[package]
name = "shortcut-notes"
version = "0.1.0"
edition = "2024"
description = "A TUI to manage notes with Shorcut project management integration"
license = "MIT"

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.55", features = ["derive"] }
confy = "2.0.0"
crossterm = "0.29.0"
futures = "0.3.31"
ratatui = { version = "0.30.0", features = ["unstable"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
textwrap = "0.16"
slugify = "0.1.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
unicode-ellipsis = "0.3.0"
tempfile = "3.24.0"
which = "8.0.0"
throbber-widgets-tui = "0.10.0"
tui-scrollview = "0.6"
tui-widget-list = "0.15"
open = "5.3.3"
fuzzy-matcher = "0.3"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
